src/objects/Scenario_Debt__c.object
<CustomObject>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenario Debts</relationshipLabel>
        <relationshipName>Scenario_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
	  <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growth_Rate__c</fullName>
        <label>Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Term_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Term Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Debts</relationshipLabel>
        <relationshipName>Scenario_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Scenario Debt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Debts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>